Fri Nov  6 00:47:50 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/AssociationData.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportImpl.h:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportImpl.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/framework/TransportInterface.h:
        * dds/DCPS/transport/framework/TransportInterface.inl:
        * dds/DCPS/transport/framework/TransportInterface.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgramTransport.h:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgramTransport.cpp:

          Refactored TransportInterface to support passing the local RepoId
          down to TransportImpl::find_or_create_datalink; this is needed to
          support proper handshaking in the ReliableMulticast transport.

        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.h:
        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.cpp:
        * tests/DCPS/FooTest3_0/SimpleSubscriber.cpp:
        * tests/DCPS/FooTest3_1/SimpleSubscriber.cpp:
        * tests/DCPS/FooTest3_2/SimpleSubscriber.cpp:
        * tests/transport/dds_comparative/Pub.cpp:
        * tests/transport/dds_comparative/Sub.cpp:
        * tests/transport/mcast_simple/SimplePublisher.cpp:
        * tests/transport/mcast_simple/SimpleSubscriber.cpp:
        * tests/transport/mcast_simple_n/SimplePublisher.cpp:
        * tests/transport/mcast_simple_n/SimpleSubscriber.cpp:
        * tests/transport/simple/SimplePublisher.cpp:
        * tests/transport/simple/SimpleSubscriber.cpp:
        * tests/transport/simple_bp/SimplePublisher.cpp: